src/main/java/com/example/timelist/Error/GroupSizeStudentException.java
package com.example.timelist.Error;

public class GroupSizeStudentException extends RuntimeException{
}
